# Helium10fileprocessor

./: .gitignore  .replit  app.py  generate_requirements.py  pyproject.toml  replit.nix  requirements.txt
.streamlit/: config.toml
attached_assets/: Blocked_Brands.xlsx
data/: Blocked_Brands.xlsx  Blocked_Product_IDs.xlsx  default_shipping_legend.xlsx
modules/: __init__.py  blocked_brands.py  blocked_items.py  data_processing.py  excel_utils.py  github_sync.py  tutorial.py
project-folder/data/: Blocked_Brands.xlsx  default_shipping_legend.xlsx
