[project]
name = "helium10-file-processor"
version = "0.1.0"
description = "A Streamlit-based e-commerce product data processing application for Amazon sellers"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.44",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pillow<11.0.0",
    "streamlit==1.31.0",
]

[tool.ruff]
line-length = 120